# hello-world

./: CMakeLists.txt  README.md  main.cpp
myapp/: CMakeLists.txt
myapp/src/: myapp.cpp
mylibrary/: CMakeLists.txt
mylibrary/include/mylibrary/: mylibrary.h
mylibrary/src/: lib.cpp
mylibrary/test/: CMakeLists.txt  test_mylib_pass.cpp
